--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -1,4 +1,4 @@
-﻿@page "/"
+﻿@page "/purchaseorder"
 @namespace BlazorReportingTools.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
