--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -12,19 +12,19 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Report Designer
             </NavLink>
         </li>*@
-        <li class="nav-item px-3">
+        @*<li class="nav-item px-3">
             <NavLink class="nav-link" href="reportviewer">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Report Viewer
             </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="prview">
-                <span class="oi oi-eye" aria-hidden="true"></span> PR View
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
+        </li>*@
+        @*<li class="nav-item px-3">
             <NavLink class="nav-link" href="prcreate">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> PR Create
+            </NavLink>
+        </li>*@
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="purchaseorder">
+                <span class="oi oi-eye" aria-hidden="true"></span> Purchase Order
             </NavLink>
         </li>
         <li class="nav-item px-3">
