--- a/Pages/AddItemToPO.razor
+++ b/Pages/AddItemToPO.razor
@@ -1,4 +1,4 @@
-﻿@page "/AddItemToPO"
+﻿@page "/AddItemToPO/{id:int}"
 @inject IePRService ePRService
 @inject NavigationManager NavigationManager
 
@@ -7,7 +7,7 @@
 <body>
     <div class="col-6">
         <EditForm Model="_itemListModel">
-            <div class="form-group">
+            <div class="form-group">                                                        
                 <label>Code:</label>
                 <InputSelectNumber @bind-Value="_itemListModel.Code" class="form-control">
                     @foreach (var item in ePRService.Items)
@@ -34,10 +34,16 @@
 </body>
 
 @code {
+    [Parameter]
+    public int? Id { get; set; }
 
     ItemListModel _itemListModel = new ItemListModel();
-
     PurchaseOrderModel _purchaseOrderModel = new PurchaseOrderModel();
+
+    protected override async Task OnParametersSetAsync()
+    {     
+        _itemListModel = await ePRService.GetPurchaseOrderItemListID((int)Id);
+    }
 
     protected override async Task OnInitializedAsync()
     {
@@ -45,7 +51,7 @@
     }
 
     private void HandleSubmit()
-    {        
+    {
         ePRService.CreatePurchaseOrderItemList(_itemListModel);
         NavigationManager.NavigateTo("/prcreate");
     }
