--- a/Pages/ItemList.razor
+++ b/Pages/ItemList.razor
@@ -9,7 +9,8 @@
         <div>
             <table class="table table-borderless table-striped table-hover">
                 <thead class="thead-dark">
-                    <tr>
+                    <tr>              
+                        <th></th>
                         <th>Item Code</th>
                         <th>Qty</th>
                         <th>Price</th>
@@ -18,6 +19,12 @@
 
                 <tbody>
                     <tr>
+                        <td>
+                            <InputSelectNumber @bind-Value="newItemListModel.POCode" class="form-control">
+                                <option value="@Id">@Id</option>
+                            </InputSelectNumber>                            
+                        </td>
+
                         <td>
                             <InputSelectNumber id="codeselect" @bind-Value="newItemListModel.Code" class="form-control">
                                 @foreach (var item in ePRService.Items)
@@ -46,28 +53,28 @@
     [Parameter]
     public int? Id { get; set; }
 
-    //protected override async Task OnParametersSetAsync()
-    //{
-    //    newItemListModel = await ePRService.GetPurchaseOrderItemListID((int)Id);
-    //}
-
     ItemListModel newItemListModel = new ItemListModel();
-
     PurchaseOrderModel newPurchaseOrderModel = new PurchaseOrderModel();
+
+    protected override async Task OnParametersSetAsync()
+    {
+        newPurchaseOrderModel = await ePRService.GetPurchaseOrderModelId((int)Id);
+        newItemListModel = await ePRService.GetPurchaseOrderItemListID((int)Id);
+    }
 
     protected override async Task OnInitializedAsync()
     {
-        await ePRService.GetItem();
+        await ePRService.GetItem();        
     }
 
     async Task HandleSubmit()
-    {
+    {    
         await ePRService.CreatePurchaseOrderItemList(newItemListModel);
         NavigationManager.NavigateTo($"/ViewPR/{Id}");
     }
 
     private void Cancel()
     {
-        NavigationManager.NavigateTo($"/ViewPR/{Id}");
+    NavigationManager.NavigateTo($"/ViewPR/{Id}");
     }
 }
